# miosix-kernel

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Readme.md  mbs
miosix/: CMakeLists.txt  Makefile
miosix/_doc/textdoc/: stm32-bootloader.txt
miosix/_examples/asm/: CMakeLists.txt
miosix/_examples/atsam4l_lcd/: CMakeLists.txt
miosix/_examples/blinking_led/: CMakeLists.txt
miosix/_examples/datalogger/: CMakeLists.txt
miosix/_examples/deep_sleep/: CMakeLists.txt
miosix/_examples/hd44780/: CMakeLists.txt  hd44780.cpp
miosix/_examples/ir_decoder/: CMakeLists.txt  ir_decoder.cpp
miosix/_examples/led_display/: CMakeLists.txt
miosix/_examples/loop_mount/: CMakeLists.txt
miosix/_examples/processes/: CMakeLists.txt
miosix/_examples/sad_trombone/: CMakeLists.txt  Readme.txt  player.cpp
miosix/_examples/servo/: CMakeLists.txt
miosix/_examples/streamwriter/: CMakeLists.txt
miosix/_examples/termios/: CMakeLists.txt
miosix/_examples/thread_native/: CMakeLists.txt  native_thread_example.cpp
miosix/_examples/thread_pthread/: CMakeLists.txt  pthread_example.cpp
miosix/_examples/tinyusb/: main.cpp
miosix/_tools/: CMakeLists.txt  build.sh  kernel_global_objects.pl  toolchain.cmake
miosix/_tools/compiler/gcc-9.2.0-mp3.1/: .gitignore  install-script.sh
miosix/_tools/compiler/gcc-9.2.0-mp3.3/: install-script.sh
miosix/_tools/delay_test/: CMakeLists.txt  delay_test.cpp
miosix/_tools/feedforward_profiling/: Readme.txt
miosix/_tools/feedforward_profiling/board/: CMakeLists.txt
miosix/_tools/feedforward_profiling/profiler/: CMakeLists.txt
miosix/_tools/fs_backend/: CMakeLists.txt  backend_benchmark.cpp
miosix/_tools/fs_misc_testcode/: CMakeLists.txt  dirlist.cpp
miosix/_tools/processes/: CMakeLists.txt
miosix/_tools/processes_tests/: processes_patch_recap.md
miosix/_tools/processes_tests/exception_unwinding/: CMakeLists.txt  debugging_notes.md  how_to_debug_with_clang.md  main.cpp
miosix/_tools/processes_tests/extern_const/: CMakeLists.txt  main.cpp
miosix/_tools/ram_test/: CMakeLists.txt  main.cpp
miosix/_tools/testsuite/: CMakeLists.txt  Readme.txt  build.sh  cleanup.sh  testsuite.cpp
miosix/_tools/testsuite/mpu_testsuite/: build.sh
miosix/_tools/testsuite/syscall_testsuite/: build.sh
miosix/arch/: CMakeLists.txt
miosix/arch/common/cache/: cortexMx_cache.cpp  cortexMx_cache.h
miosix/arch/common/core/: atomic_ops_impl_arm7.h  interrupts_arm7.cpp  interrupts_cortexMx.cpp  rp2040_os_timer.cpp
miosix/arch/common/drivers/: efm32_adc.cpp  efm32_adc.h  efm32_gpio.cpp  efm32_gpio.h  efm32_serial.cpp  efm32_serial.h  rp2040_gpio.h  rp2040_serial.cpp  rp2040_serial.h  sd_stm32f1.cpp  sd_stm32f2_f4_f7.cpp  sd_stm32f2_f4_f7.h  sd_stm32h7.cpp  sd_stm32l4.cpp  serial.h  serial_atsam4l.cpp  serial_lpc2000.cpp  serial_stm32.cpp  serial_stm32.h  servo_stm32.cpp  servo_stm32.h  stm32_backup_domain.cpp  stm32_backup_domain.h  stm32_bsram.cpp  stm32_bsram.h  stm32_gpio.cpp  stm32_gpio.h  stm32_hardware_rng.cpp  stm32_rtc.cpp  stm32_serial_common.cpp  stm32_serial_common.h  stm32f1_f2_f4_serial.cpp  stm32f1_gpio.cpp  stm32f1_gpio.h  stm32f2_f4_i2c.cpp  stm32f2_f4_serial.cpp  stm32f4_serial.cpp  stm32f4_serial.h  stm32f7_serial.cpp  stm32f7_serial.h
miosix/arch/common/os_timer/: atsam4l_os_timer.cpp  efm32_os_timer.cpp  lpc2000_os_timer.cpp  rp2040_os_timer.cpp  stm32_16bit_os_timer.cpp  stm32_32bit_os_timer.cpp  stm32_rtc_os_timer.cpp
miosix/arch/cortexM0_stm32f0/stm32f030r8_stm32f0discovery/: boot.cpp
miosix/arch/cortexM0_stm32f0/stm32f072rb_stm32f0discovery/: boot.cpp
miosix/arch/cortexM0plus_rp2040/common/: rp2040_boot.cpp
miosix/arch/cortexM0plus_rp2040/rp2040_raspberry_pi_pico/: rp2040_2M+264k_rom.ld
miosix/arch/cortexM0plus_stm32l0/stm32l053r8_nucleo/: boot.cpp
miosix/arch/cortexM3_stm32/stm32f103c8_skyward_alderaan/: stm32_128k+20k_rom.ld
miosix/arch/cortexM3_stm32/stm32f103cb_skyward_alderaan/: stm32_128k+20k_rom.ld
miosix/arch/cortexM3_stm32f1/stm32f103ze_evaluation/: stm32f10x_eval.cfg
miosix/arch/cortexM3_stm32f1/stm32f103ze_stm3210e-eval/: boot.cpp
miosix/arch/cortexM3_stm32f2/stm32f207ig_evaluation/: stm3220g-eval.cfg
miosix/arch/cortexM3_stm32f2/stm32f207zg_EthBoardV2/: boot.cpp  stm32_1m+128k_code_in_xram.ld
miosix/arch/cortexM3_stm32l1/stm32l151c8_als_mainboard/: boot.cpp
miosix/arch/cortexM3_stm32l1/stm32l152re_nucleo/: boot.cpp
miosix/arch/cortexM4_stm32f4/: CMakeLists.txt
miosix/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery/: CMakeLists.txt  stm32_1m+192k_ram.ld
miosix/arch/cortexM4_stm32f4/stm32f429zi_stm32f4discovery/: CMakeLists.txt
miosix/arch/cortexM7_stm32f7/: CMakeLists.txt
miosix/arch/cortexM7_stm32f7/stm32f746zg_nucleo/: boot.cpp
miosix/cmake/: AddProcess.cmake  AddProgramTarget.cmake  AddRomfsImage.cmake  Config.cmake.in  CreateProcessesDir.cmake  LinkTarget.cmake  add_miosix_libraries.cmake  boards.cmake  kernel_sources.cmake  mbs.cmake  miosix.cmake  miosix_add_board_libraries.cmake  miosix_link_target.cmake  target_link_miosix.cmake  toolchain.cmake
miosix/cmake/Toolchains/: clang.cmake  gcc-9.2.0.cmake
miosix/config/: Makefile.inc  boards.cmake  miosix_settings.h  options.cmake
miosix/default/config/: miosix_settings.h
miosix/filesystem/: file.cpp  file_access.h  stringpart.cpp
miosix/filesystem/littlefs/: lfs_miosix.h
miosix/interfaces/: atomic_ops.h  bsp.h  cpu_const.h  endianness.h  interrupts.h  poweroff.h
miosix/interfaces_private/: bsp_private.h  cpu.h  os_timer.h  sleep.h  userspace.h
miosix/kernel/: boot.cpp  boot.h  error.cpp  error.h  intrusive.h  kernel.cpp  kernel.h  process.cpp  process.h  pthread.cpp  pthread_private.h  queue.h  stage_2_boot.cpp  sync.cpp  sync.h
miosix/kernel/scheduler/: scheduler.h  timer_interrupt.h
miosix/libsyscalls/: CMakeLists.txt  crt0.s  crt1.cpp  memoryprofiling.cpp
miosix/stdlib_integration/: libc_integration.cpp
miosix/util/: lcd44780.cpp  util.cpp  util.h  version.h
miosix/util/angel/: angel.cpp  angel.h  angel_fs.cpp  angel_fs.h  angel_serial.cpp  angel_serial.h
(+479 files in other folders)
